--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Work Day Scheduler</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <script src="https://kit.fontawesome.com/f53a07ee43.js" crossorigin="anonymous"></script>
-  
+  <link rel="stylesheet" type="text/css" href="./style.css">
   
 </head>
 <body>
   <header class="container-fluid border-bottom border-dark mb-2">
     <div class="row justify-content-center"><h1>Work Day Scheduler</h1></div>
-    <div class="row justify-content-center"><h5>A Simple Calendar for Scheduling Your Workday</h5></div>
+    <div class="row justify-content-center"><h5>A Simple Solution to Orginize Your Day</h5></div>
     <div class="row justify-content-center" id="date-today"><h6></h6></div>
   </header>
 
@@ -88,7 +87,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <!--<script>src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es-us.js"</script>-->
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es-us.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
